--- a/src/jade/_partials/_header.jade
+++ b/src/jade/_partials/_header.jade
@@ -11,8 +11,8 @@ mixin header()
 						h1.site-title The Open Brain Project
 						h2.site-tagline Translating discovery into care
 			.right-header-content
-				a.header-social-link(href="https://twitter.com", aria-label="Open Brain Project on Twitter")
+				a.header-social-link.twitter(href="https://twitter.com", aria-label="Open Brain Project on Twitter")
 					+icon("twitter")
-				a.header-social-link(href="https://facebook.com", aria-label="Open Brain Project on Facebook")
+				a.header-social-link.facebook(href="https://facebook.com", aria-label="Open Brain Project on Facebook")
 					+icon("facebook")
 	+nav()
