--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -5,11 +5,11 @@ include ./_partials/_brain_graphic
 include ./_partials/_footer
 include ./_partials/_signup
 
-+head("The Open Brain Project")
++head("")
 body.home
 	+header("")
 	main
-		section.mission-section
+		section.mission-section.page-hero
 			.wrapper
 				+brain_graphic()
 				.container
