--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,12 +8,22 @@
 @import "partials/functions";
 
 // Variables =============================================================================
-$white: #fff;
 $black: #16161d;
-$light_black: tint($black, 5%);
-$lighter_black: tint($black, 10%);
-$light_gray: rgba(mix($black, $white), 0.25);
-$light_white: rgba($white, 0.1);
+$white: #fff;
+$gray-900: mix($black, $white, 90%);
+$gray-800: mix($black, $white, 80%);
+$gray-700: mix($black, $white, 70%);
+$gray-600: mix($black, $white, 60%);
+$gray-500: mix($black, $white, 50%);
+$gray-400: mix($black, $white, 40%);
+$gray-300: mix($black, $white, 30%);
+$gray-200: mix($black, $white, 20%);
+$gray-100: mix($black, $white, 10%);
+$gray-50: mix($black, $white, 5%);
+
+$gray-700a: rgba($black, 0.75);
+$gray-300a: rgba($black, 0.3);
+$gray-100a: rgba($black, 0.1);
 
 $blue_link: #0c65ad;
 $purple_link: #9d13c1;
@@ -25,73 +35,14 @@ $green: #2f7d33;
 $purple: #673ab7;
 $gray: #3a4a52;
 
+$twitter: #38a1f3;
+$facebook: #4267b2;
+
 $mobile: 20rem;
 $tablet: 40rem;
 $desktop: 60rem;
 
 // Mixins ================================================================================
-
-.blue-gradient {
-	background-color: $blue;
-	background-image: linear-gradient(
-		to bottom right,
-		rgba($blue, 0),
-		tint(adjust-hue($blue, 20deg), 40deg)
-	);
-}
-
-.turquoise-gradient {
-	background-color: $turquoise;
-	background-image: linear-gradient(
-		rgba($turquoise, 0),
-		tint(adjust-hue($turquoise, -5deg), 5%)
-	);
-}
-
-.orange-gradient {
-	background-color: $orange;
-	background-image: linear-gradient(
-		to bottom right,
-		rgba($orange, 0),
-		adjust-hue($orange, 8deg)
-	);
-}
-
-.green-gradient {
-	background-color: $green;
-	background-image: linear-gradient(
-		to bottom right,
-		rgba($green, 0),
-		shade(adjust-hue($green, -40deg), 10%)
-	);
-}
-
-.purple-gradient {
-	background-color: $purple;
-	background-image: linear-gradient(
-		to bottom right,
-		rgba($purple, 0),
-		adjust-hue($purple, 15deg)
-	);
-}
-
-.gray-gradient {
-	background-color: $gray;
-	background-image: linear-gradient(
-		to bottom right,
-		rgba($gray, 0),
-		tint(adjust-hue($gray, 30deg), 10%)
-	);
-}
-
-.black-gradient {
-	background-color: $black;
-	background-image: linear-gradient(
-		to bottom right,
-		rgba($black, 0),
-		lighten($black, 8%)
-	);
-}
 
 :root {
 	--root-size: 90%;
@@ -101,8 +52,11 @@ $desktop: 60rem;
 	--medium: 0.5rem;
 	--small: 0.25rem;
 
+	--overhang: 8rem;
+	--negative-overhang: -8rem;
+
 	--transition: 0.25s;
-	--transition-hover: 0s;
+	--transition-hover: 0.05s;
 	--transition-decorative: 1s;
 
 	--radius: 0.25rem;
@@ -134,38 +88,17 @@ body {
 	color: $black;
 	min-height: 100vh;
 	background: $white;
-	// background-image: radial-gradient(
-	// 		circle at top left,
-	// 		transparent 0,
-	// 		transparent 60vw,
-	// 		rgba($light_gray, 0.06) 0,
-	// 		transparent 70vw,
-	// 		transparent 0
-	// 	),
-	// 	radial-gradient(
-	// 		circle at bottom right,
-	// 		transparent 0,
-	// 		transparent 60vw,
-	// 		rgba($light_gray, 0.06) 0,
-	// 		transparent 70vw,
-	// 		transparent 0
-	// 	);
-	// background: linear-gradient($white, shade($white, 5%));
 }
 
-section {
-	padding: var(--large) 0;
-
-	.page-content > &:last-child {
-		padding: var(--large) 0 0;
-		border-bottom: 0;
-	}
+main {
+	background: $gray-50;
+	padding-bottom: var(--extra-large);
 }
 
 .page-title {
 	padding: var(--small) 0;
-	border-top: thin solid $light_gray;
-	border-bottom: thin solid $light_gray;
+	border-top: thin solid $gray-200;
+	border-bottom: thin solid $gray-200;
 }
 
 .container,
@@ -317,26 +250,45 @@ header {
 }
 
 .header-social-link {
-	display: inline-block;
+	display: inline-flex;
+	align-items: center;
+	justify-content: center;
 	vertical-align: middle;
-	line-height: 2.5em;
-	padding: 0 var(--medium);
-	text-align: center;
+	width: 2.5em;
+	height: 2.5em;
 	cursor: pointer;
-	vertical-align: top;
+	border-radius: var(--radius);
+	background: $gray-50;
+	margin-left: var(--small);
+	transition: background-color var(--transition), color var(--transition);
 
-	&:first-child {
-		border-right: thin solid $light_gray;
+	&:hover,
+	&:focus {
+		color: $white;
+		transition-duration: var(--transition-hover);
+	}
+
+	&.facebook {
+		&:hover,
+		&:focus {
+			background: $facebook;
+		}
+	}
+
+	&.twitter {
+		&:hover,
+		&:focus {
+			background: $twitter;
+		}
 	}
 
 	.icon {
 		width: 1.25em;
 		height: 1.25em;
-		vertical-align: middle;
 	}
 
 	&:hover {
-		background: $light_gray;
+		background: $gray-200;
 	}
 }
 
@@ -384,7 +336,7 @@ header {
 // Navigation ============================================================================
 .nav {
 	position: relative;
-	background: $lighter_black;
+	background: $gray-900;
 
 	.container {
 		padding: 0 var(--large);
@@ -407,6 +359,8 @@ header {
 
 .nav-group {
 	display: inline-block;
+	background: $gray-900;
+	transition: background-color var(--transition);
 
 	@media (min-width: $tablet) {
 		position: relative;
@@ -414,14 +368,15 @@ header {
 
 	&:hover,
 	&:focus {
-		background: $light_black;
+		transition-duration: var(--transition-hover);
+		background: $black;
 		outline: 0;
 	}
 }
 
 .nav-group {
 	&:focus-within {
-		background: $light_black;
+		background: $black;
 		outline: 0;
 	}
 }
@@ -433,13 +388,12 @@ header {
 	right: var(--large);
 	z-index: 100;
 	overflow: hidden;
-	background: $light_black;
+	background: $black;
 	border-radius: 0 0 var(--radius) var(--radius);
 
 	.nav-group:hover &,
 	.nav-group:focus & {
 		display: block;
-		box-shadow: 0 0.5em 1em $light_gray;
 	}
 
 	@media (min-width: $tablet) {
@@ -457,7 +411,6 @@ header {
 .nav-subgroup {
 	.nav-group:focus-within & {
 		display: block;
-		box-shadow: 0 0.5em 1em $light_gray;
 	}
 }
 
@@ -476,11 +429,11 @@ header {
 	color: $white;
 
 	&[href] {
+		cursor: pointer;
 		text-decoration: none;
 
 		&:hover,
 		&:focus {
-			cursor: pointer;
 			outline: 0;
 
 			span {
@@ -531,29 +484,37 @@ header {
 	background: $black;
 
 	@media (min-width: $tablet) {
-		box-shadow: inset 0 var(--small) tint($gray, 25%);
+		box-shadow: inset 0 var(--small) $gray-600;
 	}
 }
 
 // Elements ==============================================================================
 .page-hero {
 	position: relative;
-	padding-bottom: 6rem;
+	padding: var(--large) 0 var(--overhang);
 	color: $white;
-
-	@extend .gray-gradient;
+	background-image: url("../_img/wave.svg");
+	background-position: center bottom;
+	background-size: 100% var(--overhang);
+	background-repeat: no-repeat;
+	background-color: $gray;
+	overflow: hidden;
 
 	.discover-page & {
-		@extend .turquoise-gradient;
+		background-color: $turquoise;
 	}
 	.translate-page & {
-		@extend .orange-gradient;
+		background-color: $orange;
 	}
 	.learn-page & {
-		@extend .blue-gradient;
+		background-color: $blue;
 	}
 	.join-page & {
-		@extend .green-gradient;
+		background-color: $green;
+	}
+
+	.container {
+		padding: var(--extra-large);
 	}
 
 	h1 {
@@ -576,37 +537,17 @@ header {
 	}
 
 	& + .page-content {
-		margin: -6rem var(--large) 0;
+		margin: var(--negative-overhang) 0 0;
 
 		.container {
 			background: $white;
-			min-height: 10em;
+			min-height: 20em;
 			padding-top: var(--extra-large);
 
 			&:first-child {
 				position: relative;
-				border-radius: var(--radius) var(--radius) 0 0;
-
-				&:before,
-				&:after {
-					position: absolute;
-					top: 5rem;
-					bottom: 0;
-					width: 1px;
-					background: linear-gradient(
-						$light_gray,
-						rgba($light_gray, 0)
-					);
-					content: "";
-				}
-
-				&:before {
-					left: -1px;
-				}
-
-				&:after {
-					right: -1px;
-				}
+				border-radius: var(--radius);
+				box-shadow: 0 1rem 2rem $gray-100a;
 			}
 		}
 	}
@@ -622,12 +563,8 @@ header {
 
 // Mission ===============================================================================
 .mission-section {
-	position: relative;
-	@extend .gray-gradient;
 	color: $white;
-	padding: var(--extra-large) 0 6rem;
 	overflow: hidden;
-	text-shadow: 0 1px 2px rgba($black, 0.5);
 
 	.wrapper {
 		position: relative;
@@ -721,24 +658,6 @@ header {
 			text-decoration: none;
 		}
 	}
-
-	&:before,
-	&:after {
-		position: absolute;
-		top: 5rem;
-		bottom: 0;
-		width: 1px;
-		background: linear-gradient($light_gray, rgba($light_gray, 0));
-		content: "";
-	}
-
-	&:before {
-		left: -1px;
-	}
-
-	&:after {
-		right: -1px;
-	}
 }
 
 .featured-meta {
@@ -784,7 +703,7 @@ header {
 }
 .partner-meta {
 	flex: 1;
-	border-left: thin solid $light_gray;
+	border-left: thin solid $gray-200;
 	padding: 0 var(--medium);
 }
 
@@ -909,13 +828,15 @@ header {
 		cursor: pointer;
 		opacity: 0.75;
 		display: inline-block;
-		background: $light_gray;
+		background: $gray-100;
 		border-radius: var(--radius);
 		padding: var(--small) var(--medium);
 		margin: 0 var(--large) var(--large);
+		transition: opacity var(--transition);
 
 		&:hover {
 			opacity: 1;
+			transition: opacity var(--transition-hover);
 		}
 	}
 }
@@ -926,7 +847,7 @@ header {
 	padding: var(--large);
 	margin-top: var(--large);
 	margin-bottom: calc(var(--extra-large) * -1);
-	background: $lighter_black;
+	background: $gray-800;
 	color: $white;
 }
 .filters-list {
@@ -1027,8 +948,7 @@ header {
 	flex: 2;
 	border-radius: var(--radius);
 	margin: var(--extra-large) 0 0;
-	background: $light_gray;
-	background: gainsboro;
+	background: $gray-200;
 
 	@media (min-width: $tablet) {
 		margin: 0 0 0 var(--extra-large);
@@ -1205,13 +1125,13 @@ header {
 }
 
 .discover-cycle-block {
-	@extend .turquoise-gradient;
+	background: $turquoise;
 }
 .translate-cycle-block {
-	@extend .orange-gradient;
+	background: $orange;
 }
 .learn-cycle-block {
-	@extend .blue-gradient;
+	background: $blue;
 }
 
 // TBI ===================================================================================
@@ -1240,7 +1160,6 @@ header {
 // Footer ================================================================================
 footer {
 	background: $white;
-	border-top: thin solid $light_gray;
 
 	.container {
 		opacity: 0.5;
@@ -1266,7 +1185,7 @@ footer {
 	}
 
 	.right {
-		padding-left: var(--large);
+		display: block;
 
 		@media (min-width: $tablet) {
 			float: right;
