--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -31,7 +31,7 @@ $purple_link: #9d13c1;
 $blue: #0670c4;
 $turquoise: #0ba2b5;
 $orange: #d17c00;
-$green: #2f7d33;
+$green: #336d35;
 $purple: #673ab7;
 $gray: #3a4a52;
 
