--- a/src/jade/_partials/_head.jade
+++ b/src/jade/_partials/_head.jade
@@ -8,7 +8,7 @@ mixin head(pageTitle, pageDescription)
 			
 			// Page title
 			- if (pageTitle === "")
-				title "The Open Brain Project | Discover, Translate, Care"
+				title= "The Open Brain Project | Discover, Translate, Care"
 			- else
 				title=pageTitle + " | The Open Brain Project"
 
