--- a/src/jade/join/index.jade
+++ b/src/jade/join/index.jade
@@ -13,8 +13,8 @@ body.join-page
 			p Join the Open Brain Project to receive updates or contribute data
 	main.page-content
 		section
-			.container.flex-form-container
-				aside.form-aside
+			.container.split-container
+				aside.split-aside
 					p The Open Brain Project is a resource for patients, clinicians, scientists and students. 
 					p It is designed to serve as a hub to facilitate research into how brain injury affects cognitive, sensory and motor function. 
 					p If you have data, publications, news releases, patient videos, or experimental resources to contribute, or if you would like to sign up to receive our newsletter, please enter your email address. 
