--- a/src/jade/experiment-exchange/index.jade
+++ b/src/jade/experiment-exchange/index.jade
@@ -10,7 +10,7 @@ body.discover-page.experiment-exchange-page
 	section.page-hero
 			.container
 				h1 Experiment Exchange
-				p <a href="/join"><svg class="icon icon-join"><use xlink:href="#join"></use></svg>Join the Open Brain Project</a> to receive information about how to post your content here. 
+				p <a href="/join"><svg class="icon icon-join"><use xlink:href="#join"></use></svg>Join the Open Brain Project</a> to receive information about how to post your content here
 	main.page-content
 		section
 			.container
