--- a/src/jade/tbi/index.jade
+++ b/src/jade/tbi/index.jade
@@ -26,7 +26,7 @@ body.discover-page.tbi-page
 									+icon("youtube")
 						p Hirad, Bazarian, Merchant-Borna, Garcea, Heilbronner, Paul, Hintz, van Wijngaarden, Schifitto, Wright, Espinoza, and Mahon. (2019). A common neural signature of brain injury in concussion and sub-concussion. Science Advances.
 				object.tbi-pdf(data="../_materials/example.pdf", type="application/pdf", width="100%" height="500")
-					p It appears you don't have a PDF plugin for this browser. You can <a href="resume.pdf">click here to download the PDF file.
+					p.tbi-pdf-unavailable It appears you don't have a PDF plugin for this browser. You can <a href="../_materials/example.pdf">click here to download the PDF file</a>.
 			.tbi-interactive
 				.wrapper.split-wrapper
 					.tbi-model-wrapper
