--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1132,9 +1132,12 @@ $color-array: $inferno-array;
 	p {
 		margin: var(--large) 0 0;
 		font-size: 0.9em;
-		border-left: thin solid $gray-100;
-		padding-left: var(--large);
 		color: $gray-800;
+
+		@media (min-width: $tablet) {
+			border-left: thin solid $gray-100;
+			padding-left: var(--large);
+		}
 	}
 }
 
@@ -1143,7 +1146,14 @@ $color-array: $inferno-array;
 	overflow: hidden;
 	background: $gray-100;
 	margin: var(--extra-large) 0 0;
-	box-shadow: 0 0.25rem 0.5rem $gray-100a;
+	border-bottom: thin solid $gray-100;
+}
+
+.tbi-pdf-unavailable {
+	margin: var(--extra-large) 0 0;
+	background: $gray-100;
+	padding: var(--large);
+	border-radius: var(--radius);
 }
 
 .tbi-interactive {
@@ -1209,12 +1219,12 @@ $color-array: $inferno-array;
 	right: 0;
 	text-align: right;
 	color: $white;
+	pointer-events: none;
 }
 
 .intensity-bar {
 	height: 0.25em;
 	width: 7em;
-	background: red;
 	background-image: linear-gradient(90deg, $inferno-array);
 }
 
