--- a/src/jade/_partials/_footer.jade
+++ b/src/jade/_partials/_footer.jade
@@ -7,5 +7,6 @@ mixin footer()
 				| Find us on <a href="http://facebook.com">Facebook</a> and <a href="https://twitter.com">Twitter</a>
 			span.right
 				<a href="/join" class="right"><svg class="icon icon-join"><use xlink:href="#join"></use></svg>Join the Open Brain Project</a>
+	script(src="../_js/colcade.min.js")
 	script(src="../_js/openbrainproject.js")
 	+svg()
