--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -29,11 +29,12 @@ $blue_link: #0c65ad;
 $purple_link: #9d13c1;
 
 $blue: #0670c4;
-$turquoise: #0ba2b5;
-$orange: #d17c00;
-$green: #336d35;
-$purple: #673ab7;
 $gray: #3a4a52;
+$green: #336d35;
+$orange: #d17c00;
+$purple: #673ab7;
+$red: #e53935;
+$turquoise: #0ba2b5;
 
 $twitter: #38a1f3;
 $facebook: #4267b2;
@@ -128,16 +129,19 @@ main {
 // Typography ============================================================================
 h1 {
 	font-size: 1.5em;
+	line-height: 1.2;
 }
 
 h2 {
 	font-size: 1.8em;
 	margin-bottom: var(--medium);
+	line-height: 1.25;
 }
 
 h3 {
 	font-size: 1.2em;
 	margin-bottom: var(--small);
+	line-height: 1.3;
 }
 
 h4 {
@@ -556,7 +560,6 @@ header {
 	}
 }
 
-// =======================================================================================
 // Mission ===============================================================================
 .mission-section {
 	color: $white;
@@ -564,10 +567,10 @@ header {
 
 	.wrapper {
 		position: relative;
+		padding-bottom: 2rem;
 	}
 
 	p {
-		padding: var(--extra-large) 0;
 		font-size: 1.5em;
 		max-width: $tablet;
 	}
@@ -607,26 +610,27 @@ header {
 	}
 }
 
-// =======================================================================================
 // Featured Content ======================================================================
 .featured-content-section {
-	overflow: hidden;
-	margin-top: -8rem;
+	margin: -10rem 0 0;
+}
 
-	.wrapper {
-		padding: var(--large) var(--large) 0;
+.featured-grid-wrapper {
+	overflow: hidden;
+	padding: 0 var(--large) var(--extra-large);
+}
+
+.featured-grid-column {
+	@media (min-width: $tablet) {
+		float: left;
+		width: 50%;
 	}
 }
 
-.featured-content-wrapper {
-	display: inline-block;
+.featured-grid-item {
+	position: relative;
 	padding: var(--large);
 	vertical-align: top;
-	width: 100%;
-
-	@media (min-width: $tablet) {
-		width: 50%;
-	}
 }
 
 .featured-content {
@@ -636,36 +640,69 @@ header {
 	width: 100%;
 	position: relative;
 	border-radius: var(--radius);
-	padding: var(--large);
+	box-shadow: 0 1rem 2rem $gray-100a;
+
+	&:hover {
+		text-decoration: none;
+	}
+}
+
+.featured-thumbnail-wrapper {
+	border-radius: var(--radius) var(--radius) 0 0;
+	overflow: hidden;
 
 	img {
 		width: 100%;
 		height: auto;
 		vertical-align: top;
 	}
-
-	&:hover {
-		text-decoration: none;
-
-		h2 {
-			color: $blue;
-			text-decoration: underline;
-		}
-		p {
-			text-decoration: none;
-		}
-	}
 }
 
 .featured-meta {
 	padding: var(--large);
 
+	.new-featured-content {
+		display: inline-block;
+		text-transform: uppercase;
+		font-size: 0.75rem;
+		padding: var(--small) var(--medium);
+		border-radius: var(--radius);
+		box-shadow: 0 0.25rem 0.5rem $gray-100a;
+		background: $red;
+		color: $white;
+		animation: new-pulse 4s ease-in-out infinite;
+
+		@keyframes new-pulse {
+			0%,
+			50%,
+			100% {
+				background: $red;
+			}
+			25% {
+				background: tint($red, 33%);
+			}
+		}
+	}
+
 	h2 {
 		font-size: 1.25em;
-		margin: 0;
+		margin: var(--small) 0 var(--medium);
 	}
 	p {
 		margin: 0;
+	}
+
+	.featured-content:hover & {
+		h3 {
+			color: $white;
+		}
+		h2 {
+			text-decoration: underline;
+		}
+		p {
+			text-decoration: none;
+			color: $black;
+		}
 	}
 }
 
@@ -718,7 +755,8 @@ header {
 	border-radius: var(--radius);
 
 	.featured-content & {
-		padding-bottom: 75%;
+		padding-bottom: 60%;
+		border-radius: var(--radius) var(--radius) 0 0;
 	}
 }
 
